[project]
name = "m16-05-02"
version = "0.1.0"
description = ""
authors = [
    {name = "Bomber99-debug",email = "andreyrybchenko16@gmail.com"}
]
requires-python = ">=3.10,<4"
dependencies = [
    "faker (>=19.11.0,<20.0.0)",
    "requests (>=2.31.0,<3.0.0)",
    "aiohttp (>=3.8.6,<4.0.0)",
    "httpx (>=0.25.0,<0.26.0)",
    "aioshutil (>=1.3,<2.0)",
    "aiopath (==0.6.11)",
    "websockets (>=11.0.3,<12.0.0)",
    "names (>=0.3.0,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
